# mips-language-server

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  merge.py  shell.nix  tmux.sh
.github/workflows/: ci.yml  lint.yml  release.yml
editors/vscode/: .vscodeignore  LICENSE  README.md  flake.nix  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/scripts/: package.js
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: mips.tmLanguage.json
resources/: directives.json  instructions.json  instructions.sed  merged.json  pseudo-instructions.json  pseudo-instructions.sed  registers.json
src/: completion.rs  diagnostic.rs  goto_definition.rs  hover.rs  json.rs  lang.rs  language_definitions.rs  logging.rs  lsp.rs  main.rs  old.rs  parser.rs  server.rs  server_async.rs  server_sync.rs  settings.rs  tree.rs  version.rs
src/ast/: mod.rs  parser.rs
src/document/: mod.rs  utf16.rs  utils.rs
src/semantic/: mod.rs
