[package]
name = "mips-language-server"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[dependencies]
streaming-iterator = "0.1.9"

## LSP Utilities
lsp-types = "0.97.0"

## Async
tower-lsp = { version = "0.20.0", default-features = true, optional = true }
dashmap = { version = "6.1.0", optional = true }
tokio = { version = "1.42.0", features = ["full"], optional = true }

## Sync
lsp-server = { version = "0.7.8", optional = true }

## Json
serde = "1.0.216"
serde_json = "1.0.134"

## Logging
tracing = { version = "0.1.41", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

## Tree-sitter
tree-sitter = "0.25.1"
# tree-sitter-asm = "0.22.6"
# tree-sitter-mips = { git = "https://github.com/omeyenburg/tree-sitter-mips", rev = "51993537719e91619c8b6514dac1ed42fcef18be" }
tree-sitter-mips = { path = "/home/oskar/git/tree-sitter-mips/" }

# Wasm
# wasm-bindgen = "0.2.100"

[features]
default = ["async"]
sync = ["dep:lsp-server"]
async = ["dep:tower-lsp", "dep:dashmap", "dep:tokio"]
log-file = ["dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
