[package]
name = "mips-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
streaming-iterator = "0.1.9"

## LSP Utilities
lsp-types = "0.97.0"
tower-lsp = { version = "0.20.0", default-features = true }

## Async
dashmap = { version = "6.1.0" }
tokio = { version = "1.42.0", features = ["full"] }

## Json
serde = "1.0.216"
serde_json = "1.0.134"

## Logging
tracing = { version = "0.1.41", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

## Tree-sitter
tree-sitter = "0.25.1"
tree-sitter-mips = "0.3.0"

[features]
default = []
log-file = ["dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
