[package]
name = "mips-language-server"
description = "Language Server for MIPS assembly, providing completions, diagnostics and semantic analysis."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/omeyenburg/mips-language-server"
keywords = ["language-server", "lsp", "mips"]
categories = ["development-tools", "development-tools::debugging"]

[[bin]]
name = "mips-language-server"
path = "src/main.rs"

[dependencies]
streaming-iterator = "0.1.9"
smol_str = "0.3.2"

## LSP Utilities
tower-lsp-server = { version = "0.23.0", default-features = true }

## Async
dashmap = { version = "6.1.0" }
tokio = { version = "1.42.0", features = ["full"] }

## Json
serde = "1.0.216"
serde_json = "1.0.134"

## Logging
tracing = { version = "0.1.41", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

## Tree-sitter
tree-sitter = "0.25.10"
tree-sitter-mips = "0.3.1"

[features]
default = []
log-file = ["dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
